# gift-genie

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CI_MIGRATION.md  DATABASE_URL_FIX.md  DOCKER.md  DOCKER_AND_CI_SUMMARY.md  E2E_CI_AUTH_FIX.md  E2E_COMPLETE_ROADMAP.md  E2E_DEBUGGING.md  E2E_DIAGNOSTICS_PHASE1.md  E2E_FIXES_APPLIED.md  E2E_FIX_SUMMARY.md  E2E_LOGGING_DEBUG.md  E2E_MIGRATION_SUMMARY.md  E2E_NETWORK_ROOT_CAUSE.md  E2E_PHASE2_PLAN.md  E2E_TEST_PLAN_SUMMARY.md  E2E_VERIFICATION_CHECKLIST.md  ENVIRONMENT_SETUP.md  EXCEPTION_LOGGING.md  Makefile  PERMISSION_VALIDATION_FIX.md  PHASE1_COMPLETION_SUMMARY.md  PRIVATE_NETWORK.md  README.docker.md  README.md  REDIS_AUTH_FIX_PLAN.md  REDIS_FIX_SUMMARY.md  REDIS_PRIVATE_NETWORK_MIGRATION.md  SERVERLESS_SQL_FIX.md  TESTING.md  db_planning_1.md  db_summary.md  docker-compose.dev.yml  docker-compose.yml  redis_auth_fix.md
backend/: .dockerignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  pytest.ini
backend/alembic/: env.py
backend/alembic/versions/: 0f4ce5fbf7f9_remove_fk_user_permissions_permission_code.py  14beb18878a9_add_role_column_to_users_table.py  19f057918b6f_add_permissions_and_user_permissions_.py  1a2b3c4d5e6f_add_user_permissions_indexes_for_group_filtering.py  cbf6d2bc313d_add_member_language.py  ffbd152c3c69_initial.py
backend/src/gift_genie/: __init__.py  main.py
backend/src/gift_genie/application/: errors.py
backend/src/gift_genie/application/dto/: __init__.py  create_draw_command.py  create_exclusion_command.py  create_exclusions_bulk_command.py  create_group_command.py  create_member_command.py  delete_draw_command.py  delete_exclusion_command.py  delete_group_command.py  delete_member_command.py  execute_draw_command.py  finalize_draw_command.py  get_current_user_query.py  get_draw_query.py  get_draw_result.py  get_group_details_query.py  get_member_query.py  grant_permission_command.py  list_assignments_query.py  list_available_permissions_query.py  list_draws_query.py  list_exclusions_query.py  list_groups_query.py  list_members_query.py  list_user_permissions_query.py  login_command.py  notify_draw_command.py  register_user_command.py  revoke_permission_command.py  update_group_command.py  update_member_command.py
backend/src/gift_genie/application/services/: authorization_service.py
backend/src/gift_genie/application/use_cases/: __init__.py  create_draw.py  create_exclusion.py  create_exclusions_bulk.py  create_group.py  create_member.py  delete_draw.py  delete_exclusion.py  delete_group.py  delete_member.py  execute_draw.py  finalize_draw.py  get_current_user.py  get_draw.py  (+16 more)
backend/src/gift_genie/domain/: __init__.py
backend/src/gift_genie/infrastructure/: __init__.py  rate_limiting.py
backend/src/gift_genie/libs/: utils.py
backend/src/gift_genie/presentation/: __init__.py
backend/tests/: conftest.py  test_admin_permissions_api.py  test_auth_login_api.py  test_auth_logout_api.py  test_auth_me_api.py  test_auth_register_api.py  test_authorization_service.py  test_constraint_draw_algorithm.py  test_create_exclusion_use_case.py  test_create_exclusions_bulk_use_case.py  test_create_group_use_case.py  test_database_migrations.py  test_default_permissions.py  test_delete_exclusion_use_case.py  test_delete_group_use_case.py  test_draw_repositories.py  test_draw_use_cases.py  test_draws_api.py  test_email_template_i18n.py  test_exclusion_repository_sqlalchemy.py  test_get_group_details_use_case.py  test_grant_permission_use_case.py  test_granular_permissions_flow.py  test_group_owner_permissions.py  test_group_repository_sqlalchemy.py  test_groups_api.py  test_groups_detail_api.py  test_list_assignments_use_case.py  test_list_available_permissions_use_case.py  test_list_exclusions_use_case.py  test_list_user_groups_use_case.py  test_list_user_permissions_use_case.py  test_passwords.py  test_permission_registry.py  test_permission_repository_sqlalchemy.py  test_permission_validator.py  test_permissions_seed.py  test_revoke_permission_use_case.py  test_settings.py  test_smtp_notification_service.py  (+3 more)
(+453 files in other folders)
